Don't build smoke tests without check target

--- a/hello/Cpp/hello-lib/CMakeLists.txt
+++ b/hello/Cpp/hello-lib/CMakeLists.txt
@@ -5,9 +5,10 @@ target_link_libraries(hello-lib fost-core)
 target_include_directories(hello-lib PUBLIC ../include)
 install(TARGETS hello-lib LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
 
-add_library(hello-lib-smoke STATIC EXCLUDE_FROM_ALL
-        hello-text-tests.cpp
-    )
-target_link_libraries(hello-lib-smoke hello-lib)
-smoke_test(hello-lib-smoke)
-
+if(TARGET check)
+    add_library(hello-lib-smoke STATIC EXCLUDE_FROM_ALL
+            hello-text-tests.cpp
+        )
+    target_link_libraries(hello-lib-smoke hello-lib)
+    smoke_test(hello-lib-smoke)
+endif()
