--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git@github.com:hotkit/fost-base.git
 [submodule "threading"]
 	path = threading
-	url = git@github.com:hotkit/f5-threading.git
+	url = git@github.com:hotkit/threading.git
 [submodule "cord"]
 	path = cord
-	url = git@github.com:hotkit/f5-cord.git
+	url = git@github.com:hotkit/cord.git
