--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: cpp
-sudo: required
-dist: xenial
+dist: focal
 
 git:
     submodules: false
@@ -25,11 +24,11 @@ before_install:
 install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update -qq
-    - sudo apt-get install -qq -y ninja-build g++-8
+    - sudo apt-get install -qq -y ninja-build g++-10 clang-10
 
 script:
     - mkdir build.tmp && cd build.tmp
     - 'if [ "$CXX" = "g++" ]; then export CC=gcc-8; export CXX=g++-8; fi'
+    - 'if [ "$CXX" = "clang++" ]; then export CC=clang-10; export CXX=clang++-10; fi'
     - cmake .. -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE -G Ninja
     - ninja
-
